--- a/projects/edit-vid/src/index.html
+++ b/projects/edit-vid/src/index.html
@@ -107,6 +107,8 @@
         border: 1px solid #ddd;
         padding: 8px;
         text-align: left;
+        white-space: pre-wrap; /* 改行を有効にする */
+        word-break: break-all; /* 長い単語を折り返す */
       }
       #timeline-table th {
         background-color: #f2f2f2;
@@ -115,27 +117,35 @@
       }
 
       /* Action Styles */
-      #add-subtitle-container {
+      #add-subtitle-container,
+      #subtitle-settings-container {
         margin-bottom: 20px;
       }
-      #add-subtitle-container h3 {
+      #add-subtitle-container h3,
+      #subtitle-settings-container h3 {
         margin-top: 0;
         margin-bottom: 10px;
         font-size: 18px;
       }
-      #add-subtitle-container label {
+      #add-subtitle-container label,
+      #subtitle-settings-container label {
         display: block;
         margin-top: 10px;
         margin-bottom: 5px;
         font-weight: bold;
       }
       #add-subtitle-container input,
-      #add-subtitle-container textarea {
+      #add-subtitle-container textarea,
+      #subtitle-settings-container input {
         width: 100%;
         padding: 8px;
         box-sizing: border-box;
         border-radius: 4px;
         border: 1px solid #ccc;
+      }
+      #subtitle-settings-container input[type="color"] {
+        padding: 4px;
+        height: 40px;
       }
       #add-subtitle-btn {
         background-color: #4caf50; /* Green */
@@ -345,6 +355,28 @@
                 />
                 <button id="add-subtitle-btn">追加</button>
               </div>
+              <hr />
+              <div id="subtitle-settings-container">
+                <h3>テロップ設定</h3>
+                <label for="font-size-input">テキストサイズ:</label>
+                <input type="number" id="font-size-input" value="24" min="1" />
+
+                <label for="font-color-input">テキスト色:</label>
+                <input type="color" id="font-color-input" value="#FFFFFF" />
+
+                <label for="box-color-input">背景色:</label>
+                <input type="color" id="box-color-input" value="#000000" />
+
+                <label for="box-opacity-input">背景の不透明度:</label>
+                <input
+                  type="range"
+                  id="box-opacity-input"
+                  min="0"
+                  max="1"
+                  step="0.1"
+                  value="0.5"
+                />
+              </div>
             </div>
             <hr />
             <div>
@@ -415,6 +447,7 @@
       const clearVideoButton = document.getElementById("clear-video-btn");
       const videoStorageKey = "lastUploadedVideoUrl";
       const subtitlesStoragePrefix = "editvid_subtitles_";
+      const subtitleSettingsKey = "editvid_subtitle_settings";
 
       // テロップUI
       const subtitleTextInput = document.getElementById("subtitle-text");
@@ -422,6 +455,12 @@
         document.getElementById("subtitle-duration");
       const addSubtitleBtn = document.getElementById("add-subtitle-btn");
       const timelineTableBody = document.querySelector("#timeline-table tbody");
+
+      // テロップ設定UI
+      const fontSizeInput = document.getElementById("font-size-input");
+      const fontColorInput = document.getElementById("font-color-input");
+      const boxColorInput = document.getElementById("box-color-input");
+      const boxOpacityInput = document.getElementById("box-opacity-input");
 
       // 編集ダイアログUI
       const editDialog = document.getElementById("edit-dialog");
@@ -443,6 +482,7 @@
       // --- 初期化処理 ---
       document.addEventListener("DOMContentLoaded", () => {
         restoreVideoSession();
+        loadSubtitleSettings();
       });
 
       // --- イベントリスナー ---
@@ -554,9 +594,41 @@
         editSubtitleDurationInput.value = duration;
       });
 
+      // テロップ設定のイベントリスナー
+      [
+        fontSizeInput,
+        fontColorInput,
+        boxColorInput,
+        boxOpacityInput,
+      ].forEach((input) => {
+        input.addEventListener("change", saveSubtitleSettings);
+      });
+
       exportVideoBtn.addEventListener("click", () => {
         alert("TODO");
       });
+
+      // --- 関数 ---
+
+      function saveSubtitleSettings() {
+        const settings = {
+          fontSize: fontSizeInput.value,
+          fontColor: fontColorInput.value,
+          boxColor: boxColorInput.value,
+          boxOpacity: boxOpacityInput.value,
+        };
+        localStorage.setItem(subtitleSettingsKey, JSON.stringify(settings));
+      }
+
+      function loadSubtitleSettings() {
+        const settings = JSON.parse(localStorage.getItem(subtitleSettingsKey));
+        if (settings) {
+          fontSizeInput.value = settings.fontSize || "24";
+          fontColorInput.value = settings.fontColor || "#FFFFFF";
+          boxColorInput.value = settings.boxColor || "#000000";
+          boxOpacityInput.value = settings.boxOpacity || "0.5";
+        }
+      }
 
       async function handlePreview(id) {
         const videoUrl = localStorage.getItem(videoStorageKey);
@@ -574,6 +646,13 @@
         previewLoading.style.display = "block";
         previewDialog.style.display = "block";
 
+        // 現在の設定値を取得
+        const settings = {
+          fontSize: parseInt(fontSizeInput.value, 10),
+          fontColor: fontColorInput.value,
+          boxColor: `${boxColorInput.value}@${boxOpacityInput.value}`,
+        };
+
         try {
           const response = await fetch("/preview", {
             method: "POST",
@@ -585,6 +664,7 @@
               text: subtitle.text,
               startTime: subtitle.startTime,
               duration: subtitle.duration,
+              ...settings,
             }),
           });
 
@@ -608,7 +688,6 @@
         }
       }
 
-      // --- 関数 ---
       async function restoreVideoSession() {
         const lastVideoUrl = localStorage.getItem(videoStorageKey);
         if (!lastVideoUrl) return;
@@ -819,12 +898,12 @@
       }
 
       function escapeHTML(str) {
-        return str.replace(new RegExp("[&<>'\"/]", "g"), function (match) {
+        return str.replace(new RegExp("[&<>'\"]", "g"), function (match) {
           return {
             "&": "&amp;",
             "<": "&lt;",
             ">": "&gt;",
-            '"': "&quot;",
+            "\"": "&quot;",
             "'": "&#39;",
             "/": "&#x2F;",
           }[match];
