--- a/projects/edit-vid/src/index.html
+++ b/projects/edit-vid/src/index.html
@@ -249,6 +249,11 @@
         background-color: #45a049;
       }
       /* Timeline Button Styles */
+      #timeline-table .action-buttons-container {
+        display: flex;
+        gap: 4px;
+        align-items: center;
+      }
       #timeline-table .edit-btn,
       #timeline-table .delete-btn,
       #timeline-table .preview-btn {
@@ -258,7 +263,6 @@
         cursor: pointer;
         font-size: 12px;
         color: white;
-        margin: 0 2px;
       }
       #timeline-table .edit-btn {
         background-color: #4caf50; /* Green */
@@ -821,9 +825,11 @@
                     <td>${displayText}</td>
                     <td>${sub.duration.toFixed(1)}</td>
                     <td>
-                        <button class="edit-btn">編集</button>
-                        <button class="delete-btn">削除</button>
-                        <button class="preview-btn">プレビュー</button>
+                        <div class="action-buttons-container">
+                            <button class="edit-btn">編集</button>
+                            <button class="delete-btn">削除</button>
+                            <button class="preview-btn">プレビュー</button>
+                        </div>
                     </td>
                 `;
         });
